# emct_final_project

./: .gitignore  README.md  main.cpp  osc-recieve.amxd  osc-recieve.amxd alias
dev/: .gitignore  Buffer.cpp  Buffer.h  CMakeLists.txt  Editor.cpp  Editor.h  Euc.cpp  OSC.cpp  OSC.h  grid.h  main.cpp  menu.h  popup.cpp  popup.h
